--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -334,6 +334,8 @@
           items:
             - name: MongoDB (レガシ)
               href: connector-mongodb-legacy.md
+        - name: MongoDB Atlas
+          href: connector-mongodb-atlas.md
         - name: MySQL
           href: connector-mysql.md
         - name: Netezza
