--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 07/20/2020
-  ms.openlocfilehash: 0748df5bdc961ff198d91d2584072cd07965995d
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: bdfb4f0a31f655cf71b6117e9c0ef73be18c8e45
+  ms.sourcegitcommit: 2c586a0fbec6968205f3dc2af20e89e01f1b74b5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90971903"
+  ms.lasthandoff: 10/14/2020
+  ms.locfileid: "92018731"
 landingContent:
 - title: Azure Lighthouse について
   linkLists:
@@ -35,7 +35,7 @@ landingContent:
     links:
     - text: Azure Lighthouse への顧客のオンボード
       url: ./how-to/onboard-customer.md
-    - text: パートナー獲得クレジットの ID をリンクする
+    - text: パートナー ID をリンクする
       url: ./how-to/partner-earned-credit.md
   - linkListType: concept
     links:
