--- a/articles/analysis-services/index.yml
+++ b/articles/analysis-services/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: owend
   manager: mtillman
   ms.date: 10/30/2019
-  ms.openlocfilehash: a41f34134e25941d89c5dcd8b1f2a2ec5884df94
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: dcac3af93a1ddbcca6e4c96744b95a50ae30ebbe
+  ms.sourcegitcommit: 2c586a0fbec6968205f3dc2af20e89e01f1b74b5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "87553735"
+  ms.lasthandoff: 10/14/2020
+  ms.locfileid: "92015196"
 landingContent:
 - title: Azure Analysis Services について
   linkLists:
@@ -59,7 +59,7 @@ landingContent:
   - linkListType: reference
     links:
     - text: PowerShell
-      url: /azure/analysis-services/analysis-services-powershell
+      url: ./analysis-services-powershell.md
     - text: REST API
       url: /rest/api/analysisservices/
     - text: Tabular Model Scripting Language (TMSL)
