--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: kgremban
   manager: philmea
   ms.date: 08/05/2019
-  ms.openlocfilehash: d3a71cd919660686c77b866b9e7fab461678da96
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 9145d327901835bd6feda8db2e5ac5eacc03b5e5
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89300359"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91971678"
 landingContent:
 - title: Linux デバイス向けの開発
   linkLists:
@@ -46,18 +46,16 @@ landingContent:
     links:
     - text: Visual Studio 2017 を使用してモジュールを開発およびデバッグする
       url: how-to-visual-studio-develop-module.md
-- title: IoT Edge デバイスのプロビジョニング
+- title: IoT Edge デバイスを作成する
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Linux に IoT Edge をインストールする
-      url: how-to-install-iot-edge-linux.md
-    - text: Windows に IoT Edge をインストールする
-      url: how-to-install-iot-edge-windows.md
-    - text: Linux デバイスを自動的にプロビジョニングする
-      url: how-to-auto-provision-simulated-device-linux.md
-    - text: Windows デバイスを自動的にプロビジョニングする
-      url: how-to-auto-provision-simulated-device-windows.md
+    - text: IoT Edge ランタイムをインストールする
+      url: how-to-install-iot-edge.md
+    - text: 1 つのデバイスの登録とプロビジョニング
+      url: how-to-manual-provision-symmetric-key.md
+    - text: 大規模なデバイスの登録とプロビジョニング
+      url: how-to-auto-provision-symmetric-keys.md
 - title: オープンソース コミュニティと交流する
   linkLists:
   - linkListType: get-started
