--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -494,7 +494,16 @@
               href: functions-bindings-signalr-service-output.md
               displayName: SignalR Service
         - name: テーブル ストレージ
-          href: functions-bindings-storage-table.md
+          items:
+            - name: 概要
+              href: functions-bindings-storage-table.md
+              displayName: Table storage
+            - name: 入力
+              href: functions-bindings-storage-table-input.md
+              displayName: Table storage
+            - name: 出力
+              href: functions-bindings-storage-table-output.md
+              displayName: Table storage
         - name: Timer
           href: functions-bindings-timer.md
         - name: Twilio
