--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -382,11 +382,11 @@
               href: backup-azure-arm-userestapi-managejobs.md
         - name: Resource Manager テンプレート
           href: backup-rm-template-samples.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: 概要
           href: security-overview.md
-        - name: ロールベースのアクセス制御
+        - name: Azure ロールベースのアクセス制御
           href: backup-rbac-rs-vault.md
         - name: 論理的な削除
           items:
