--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -54,6 +54,22 @@
               href: class-type-matlab.md
             - name: SolidWorks のコンピューター支援設計 (CAD)
               href: class-type-solidworks.md
+        - name: Teams 内で Azure Lab Services を使用する
+          items:
+            - name: 概要
+              href: lab-services-within-teams-overview.md
+            - name: Teams からラボを作成する
+              href: how-to-get-started-create-lab-within-teams.md
+            - name: ユーザー リストの管理
+              href: how-to-manage-user-lists-within-teams.md
+            - name: VM プールの管理
+              href: how-to-manage-vm-pool-within-teams.md
+            - name: ラボの削除
+              href: how-to-get-started-create-lab-within-teams.md#deleting-classroom-labs
+            - name: スケジュールと設定
+              href: how-to-create-schedules-within-teams.md
+            - name: VM へのアクセス (学生ビュー)
+              href: how-to-access-vm-for-students-within-teams.md
 - name: 操作方法ガイド
   items:
     - name: 管理者ガイド
