--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -1,7 +1,7 @@
 - name: Data Lake Storage Gen1 のドキュメント
   href: index.yml
 - name: Data Lake Storage Gen2 のドキュメントに切り替える
-  href: 'https://docs.microsoft.com/azure/storage/data-lake-storage/introduction'
+  href: ../storage/blobs/data-lake-storage-introduction.md
 - name: 概要
   items:
     - name: Data Lake Storage Gen1 とは
@@ -139,9 +139,9 @@
         - name: Data Catalog で使用する
           href: data-lake-store-with-data-catalog.md
         - name: Azure Synapse Analytics で PolyBase と共に使用する
-          href: ../sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
+          href: ../synapse-analytics/sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
         - name: SQL Server Integration Services と共に使用する
-          href: 'https://docs.microsoft.com/sql/integration-services/connection-manager/azure-data-lake-store-connection-manager'
+          href: /sql/integration-services/connection-manager/azure-data-lake-store-connection-manager
         - name: その他の Azure 統合オプション
           href: data-lake-store-integrate-with-other-services.md
     - name: 管理する
@@ -157,13 +157,13 @@
     - name: Azure PowerShell
       href: /powershell/module/az.datalakestore
     - name: .NET
-      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/data-lake-store?view=azure-dotnet'
+      href: /dotnet/api/overview/azure/data-lake-store?view=azure-dotnet
     - name: Java
-      href: 'https://docs.microsoft.com/java/api/overview/azure/datalake?view=azure-java-stable'
+      href: /java/api/overview/azure/datalake?view=azure-java-stable
     - name: Node.js
       href: 'https://www.npmjs.com/package/azure-arm-datalake-store'
     - name: Python (アカウント管理)
-      href: 'https://docs.microsoft.com/python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store?view=azure-python'
+      href: /python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store?view=azure-python
     - name: Python (ファイルシステム管理)
       href: /python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store
     - name: REST
@@ -171,7 +171,7 @@
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.datalakestore/allversions
     - name: Azure CLI
-      href: 'https://docs.microsoft.com/cli/azure/dls'
+      href: /cli/azure/dls
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
@@ -180,11 +180,11 @@
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/updates/?product=data-lake-store'
     - name: Data Lake Store のブログ
-      href: 'https://blogs.msdn.microsoft.com/azuredatalake/'
+      href: /archive/blogs/azuredatalake/
     - name: UserVoice に関するフィードバックを送信する
       href: 'https://feedback.azure.com/forums/327234-data-lake'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-data-lake-storage.html'
+      href: /answers/topics/azure-data-lake-storage.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/data-lake-store/'
     - name: 料金計算ツール
