--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: dfecc160962fca67e08e48b1e5b266d3899a4675
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 2b36da366c41b43a125a25c682aa15b7594f0d1d
+  ms.sourcegitcommit: 1b47921ae4298e7992c856b82cb8263470e9e6f9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89048691"
+  ms.lasthandoff: 10/14/2020
+  ms.locfileid: "92057945"
 highlightedContent:
   items:
   - title: ガバナンスの概要
@@ -141,6 +141,9 @@ additionalContent:
       - text: REST
         url: /rest/api/resources/policydefinitions
         note: (定義)
+      - text: REST
+        url: /rest/api/resources/policyexemptions
+        note: (除外)
       - text: REST
         url: /rest/api/resources/policysetdefinitions
         note: (イニシアティブ)
