--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -121,6 +121,8 @@
       href: ../../storage/common/security-baseline.md
     - name: Azure Traffic Manager のセキュリティ ベースライン
       href: ../../traffic-manager/security-baseline.md
+    - name: Azure Web Application Firewall のセキュリティ ベースライン
+      href: ../../web-application-firewall/security-baseline.md
     - name: Batch のセキュリティ ベースライン
       href: ../../batch/security-baseline.md
     - name: Cognitive Services のセキュリティ ベースライン
