--- a/articles/spatial-anchors/toc.yml
+++ b/articles/spatial-anchors/toc.yml
@@ -97,15 +97,15 @@
 - name: References
   items:
     - name: Unity 用 SDK
-      href: 'https://docs.microsoft.com/dotnet/api/Microsoft.Azure.SpatialAnchors/'
+      href: /dotnet/api/Microsoft.Azure.SpatialAnchors/
     - name: iOS Objective-C 用 SDK
-      href: 'https://docs.microsoft.com/objectivec/api/spatial-anchors/'
+      href: /objectivec/api/spatial-anchors/
     - name: Android Java 用 SDK
-      href: 'https://docs.microsoft.com/java/api/com.microsoft.azure.spatialanchors/'
+      href: /java/api/com.microsoft.azure.spatialanchors/
     - name: Android NDK 用 SDK
-      href: 'https://docs.microsoft.com/cpp/api/spatial-anchors/ndk/'
+      href: /cpp/api/spatial-anchors/ndk/
     - name: HoloLens C++/WinRT 用 SDK
-      href: 'https://docs.microsoft.com/cpp/api/spatial-anchors/winrt/'
+      href: /cpp/api/spatial-anchors/winrt/
     - name: Azure CLI
       href: /cli/azure/ext/mixed-reality/spatial-anchors-account
     - name: Azure PowerShell
@@ -115,7 +115,7 @@
     - name: リリース ノート
       href: 'https://github.com/Azure/azure-spatial-anchors-samples/releases'
     - name: Azure Mixed Reality Resource Management REST API
-      href: 'https://docs.microsoft.com/rest/api/mixedreality/'
+      href: /rest/api/mixedreality/
     - name: よく寄せられる質問
       href: spatial-anchor-faq.md
     - name: 製品フィードバックの提供
